fix: docs enhances
