# routes/api.php
@@ -1,14 +1,12 @@
 <?php
 
-use App\Models\User;
+use App\Http\Controllers\Controller;
 use Illuminate\Http\Request;
-use Illuminate\Support\Facades\Hash;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\CRMController;
 use App\Http\Controllers\RecipeController;
 use App\Http\Controllers\MemberBoxController;
 use App\Http\Controllers\IngredientController;
-use Illuminate\Validation\ValidationException;
 
 /*
 |--------------------------------------------------------------------------
@@ -21,30 +19,11 @@ use Illuminate\Validation\ValidationException;
 |
 */
 
-
-Route::post('/sanctum/token', function (Request $request) {
-    $request->validate([
-        'email' => 'required|email',
-        'password' => 'required',
-        'device_name' => 'required',
-    ]);
-
-    $user = User::where('email', $request->email)->first();
-
-    if (! $user || ! Hash::check($request->password, $user->password)) {
-        throw ValidationException::withMessages([
-            'email' => ['The provided credentials are incorrect.'],
-        ]);
-    }
-
-    return $user->createToken($request->device_name)->plainTextToken;
-});
-
+Route::post('/sanctum/token', [Controller::class, 'generateToken']);
 
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
-
 
 Route::middleware('auth:sanctum')->apiResource('ingredients', IngredientController::class);
 
@@ -53,3 +32,4 @@ Route::middleware('auth:sanctum')->apiResource('recipes', RecipeController::clas
 Route::middleware('auth:sanctum')->apiResource('member-boxes', MemberBoxController::class);
 
 Route::middleware('auth:sanctum')->get('crm/ingredients-required', [CRMController::class, 'getRequiredIngredients']);
+
