# storage/api-docs/api-docs.json
@@ -11,6 +11,89 @@
         }
     ],
     "paths": {
+        "/crm/ingredients-required": {
+            "get": {
+                "tags": [
+                    "Ingredients Required"
+                ],
+                "summary": "Get list of Ingredients Required",
+                "description": "Returns list of Ingredients Required",
+                "operationId": "7aa3a905cd0c518848ff9f531b22ff86",
+                "parameters": [
+                    {
+                        "name": "order_date",
+                        "in": "query",
+                        "description": "order date",
+                        "required": false,
+                        "schema": {
+                            "type": "date",
+                            "example": "2022-07-10"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/RecipeIngredient"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/sanctum/token": {
+            "post": {
+                "tags": [
+                    "Authorization Token"
+                ],
+                "operationId": "3d8811d9f8269fb7baaee89e47df211f",
+                "requestBody": {
+                    "description": "The Token Request",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "email": {
+                                        "type": "string",
+                                        "example": "test@example.com"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "example": "password"
+                                    },
+                                    "device_name": {
+                                        "type": "string",
+                                        "example": "phone"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/ingredients": {
             "get": {
                 "tags": [
@@ -458,7 +541,8 @@
                 "properties": {
                     "delivery_date": {
                         "type": "string",
-                        "format": "date"
+                        "format": "date",
+                        "example": "2022-07-10"
                     },
                     "recipe_ids": {
                         "type": "array",
